== Version 2.6.7 Work in progress (not released -- this is a draft) ==

  Users side :
  ------------
    # A content visibility issue on popover opening has been fixed.
    # Apps :
        * Activities :
            - An issue in calendar configuration, when the end of the day is before the start, has been fixed.


== Version 2.6.6 ==

  Users side :
  ------------
    # Apps :
        * Persons :
            - In the hat card for Organisations, the field "Legal form" is now inner-edited with the name.
              The field was displayed, but was not editable directly.
        * Billing :
            - The bricks for related Quotes/SalesOrders/CreditNotes have been improved: better empty expiration date.
              It's now more consistent with the Invoices' brick.
        * Opportunities :
              - The title of the brick which displays related Opportunities for Contact/Organisation has been improved.


  Developers side :
  -----------------

    Breaking changes :
    ------------------
        - The Job registry now raises an exception when the class attribute "id" is too long
          (& so cannot be stored in the field "Job.type_id").


== Version 2.6.5 ==

  Users side :
  ------------
    # Apps :
        * Creme_config :
            # The new property types were not marked as custom since the release '2.6'.
              Notice that the fix will only works for new types, it won't fix the types
              you have created the mast months ; if you want to fix them, change the value
              of the column 'creme_core_cremepropertytype.is_custom' to "True"/"1" in your DB.
        * Emails :
            - The email form uses HTML line breaks when the HTML body is copied
              from the plain text body.

  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The custom field brick displayed inner-edition buttons even when it was disabled.