@@ -321,7 +321,12 @@ class BrickMypageLocation(CremeModel):
         ordering = ('order',)
 
     def __repr__(self):
-        return f'BrickMypageLocation(id={self.id}, user={self.user_id})'
+        return (
+            f'BrickMypageLocation('
+            f'brick_id="{self.brick_id}", '
+            f'user={self.user_id}, '
+            f'order={self.order})'
+        )
 
     def __str__(self):
         # TODO: see remark in BrickDetailviewLocation.__str__
